[gd_scene load_steps=9 format=3 uid="uid://cd5wbyf7op24q"]

[ext_resource type="Texture2D" uid="uid://bghyfnnwypwjs" path="res://GameAssets/UnderRealm/Tiled_files/Animation5.png" id="1_744xr"]
[ext_resource type="Script" path="res://Scenes/UpperLevelScenes/UnderGroundEntrance/UnderGroundEntrance.gd" id="1_fhgax"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e7uxt"]
size = Vector2(64, 49)

[sub_resource type="Animation" id="Animation_xbu4v"]
resource_name = "Idle"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_43j3s"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tl0a0"]
_data = {
"Idle": SubResource("Animation_xbu4v"),
"RESET": SubResource("Animation_43j3s")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_o78wm"]
radius = 24.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b7fp2"]
bg_color = Color(0, 0, 0, 0.729412)

[node name="UnderGroundEntrance" type="StaticBody2D" node_paths=PackedStringArray("entrance_animator", "text_indicator")]
script = ExtResource("1_fhgax")
entrance_animator = NodePath("AnimationPlayer")
text_indicator = NodePath("TextEdit")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_744xr")
hframes = 6
vframes = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_e7uxt")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_tl0a0")
}
autoplay = "Idle"

[node name="EntrancePerimeterZone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EntrancePerimeterZone"]
position = Vector2(0, 48)
shape = SubResource("CircleShape2D_o78wm")

[node name="TextEdit" type="Label" parent="."]
offset_left = -3.0
offset_top = 24.0
offset_right = 3.0
offset_bottom = 38.0
scale = Vector2(0.780227, 0.481762)
theme_override_font_sizes/font_size = 10
theme_override_styles/normal = SubResource("StyleBoxFlat_b7fp2")
text = "E"

[connection signal="body_entered" from="EntrancePerimeterZone" to="." method="_on_entrance_perimeter_zone_body_entered"]
[connection signal="body_exited" from="EntrancePerimeterZone" to="." method="_on_entrance_perimeter_zone_body_exited"]
